--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
     />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js" ></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/waypoints/4.0.1/jquery.waypoints.min.js" ></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Counter-Up/1.0.0/jquery.counterup.min.js"></script>
     <script>
       function myFunction() {
         var x = document.getElementById("VCnav");
@@ -58,10 +61,38 @@
       </div>
 
     </div>
-    <!-- footer -->
+    <!-- ,.............achivement bar................................................... -->
+
+    
+    <div class="gg-con">
+      <div class="con-1">
+          <img src="graduation-cap.png" alt="">
+          <h2 class="count">150</h2>
+          <h2 class="gg-h">+ MEMBERS</h2>
+      </div>
+      <div class="con-1">
+          <img src="open-book.png" alt="">
+          <h2 class="count">200</h2>
+          <h2 class="gg-h">  + STUDENTS</h2>
+      </div>
+      <div class="con-1">
+          <img src="school.png" alt="">
+          <h2 class="count">&nbsp 50</h2>
+          <h2 class="gg-h">  + SCHOOLS</h2>
+      </div>
+  </div>
+  <script>
+    $(document).ready(function(){
+        $(".count").counterUp({
+            delay:10,
+            time:1200
+        });
+    });
+</script>
+    <!-- footer.................................. -->
     <div class="row footer" >
       <div class ="col-lg-4 first">
-          <img class ="logo" src="EmbeddedImage.png" alt="" width="25%" >
+          <img class ="logo" src="logo.png" alt="" width="25%" >
           <br>
           <h3>Pratigya Abhiyan</h3>
           <img class="sm" src="instagram.png" alt="" width="5%">
@@ -84,7 +115,9 @@
           scrolling="no"
           marginheight="0"
           marginwidth="0"
-          ></iframe
+          ></iframe>
+          <!-- ............................... -->
+
       </div>
     </div>
   </body>
