--- a/index.html
+++ b/index.html
@@ -61,6 +61,27 @@
       </div>
 
     </div>
+    <!--messages-->
+    <div class="testimonial_m">
+      <div class="container">
+          <div class="box">
+              <div class="imgBox">
+                  <img src="anoop sirr.png" width="100%" height="100%">
+              </div>
+              <p><b>“Today a reader, tomorrow a leader.”</b></p><p>The Pratigya Abhiyan believes in student-empowerment through education. The strength of the nation lies in the strength of the student community. The Society lays its focus on achieving unparalleled excellence by optimizing the potential of students, and working towards their holistic growth, for the welfare of the society, and humanity at large.
+              </p>
+              <h4>Dr. Anoop Verma<br><span>President</span></h4>
+          </div>
+          <div class="box">
+              <div class="imgBox">
+                  <img src="Sudhanshu sir.jpeg" width="100%" height="100%">
+              </div>
+              <p><b>“The objective of education is to prepare the young how to educate themselves, exploring all round goals, enhancing creativity and their talent and achieving the heights throughout their lives.”</b></p><p>I am humbled by the opportunity to serve as General Secretary of the Pratigya Abhiyan Society; one of the largest, also oldest Society in TIET.We want all our students to achieve their full potential. Our task is to make it possible and our mission is to provide a platform for the same.
+              </p>
+              <h4>Mr. Sudhanshu Sharma<br><span>Gen Sec</span></h4>
+          </div>
+      </div>
+  </div>
     <!-- ,.............achivement bar................................................... -->
 
     
